brackets after the features/fixes that the person contributed.  A list of
contributors can be found at the end of this document.  If all changes in a
specific alpha release have been made by the same person, the person is
only mentioned in the headline of that alpha release, rather than after
each feature.

Current Beta (not yet released)
-------------------------------

    - New: Support for JAM Message base (NETJAM keyword). This requires
      SMAPI 1.6.4b or newer!
    - Removed all fread/fwrite calls that read directly into structures.
      Cfroute now works without structure packing, independently of
      endianness or other architecture details. You can now use cfroute
      on any Unix machine, RISC or Intel. [TE]
    - Another bugfix for the handling of EXCEPT statements [TE].
    - Fixed some crashes on bad syntax in the configuration file. [TE]
    - Fix: Month field was set one too high (0 = January, but CFRoute 
      wrote 1 for January, and so forth) [TE]
    - Fixed a crash when trying to route intransit mail without VIA
      kludge (this can only occur if other systems are misconfigured). [ED]
    - New keyword "RECODE". Simply do not use it. It is a TEMPORARY
      WORKAROUND for people in the Russian language area that do not yet
      support CHRS kludges according to FTSC. It takes as argument a
      recoding map similar to the one that hpt uses, and will recode all
      incoming messages from the transport to the local charset, and all
      outgoing charset from the local to the transport charset. [ED]
    - Fix: Fixed permissions of newly created directories on Unix. [ED]
    - Fix: Message hour, minute and second information in Squish folders 
      contained nonsensible values (message *read* only, so non-fatal). [ED]
    - Fix: The "EXCEPT" statement did not work as stated in the doc,
      (where it says that it applies to all node numbers following the
      EXCEPT keyword, and you have to specify another EXCEPT to undo the